# K8sIDX

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/workflows/: rust.yml
src/: heading.rs  main.rs
